# fsm

./: Makefile  README.md  callgraph.md  chatgpt_questions_codeanalysis  fsm.c  fsm.h  graph.c  list.h
big_stack/: CMakeLists.txt  big_stack.c  old_stack.c
chess/: CMakeLists.txt  TBD.txt  board.c  board.h  brq.c  chess.c  compare.c  compare.h  game.c  game.h  king.c  king.h  knight.c  mapper.c  mapper.h  montecarlo.c  montecarlo.h  move.c  move.h  moves.c  pawn.c  pawn.h  pgn.c  pgn.h  pieces.h  rules.c  rules.h  standards.h  tree.c  tree.h
chess/include/: board.h  compare.h  game.h  mapper.h  move.h  standards.h  tree.h
code/: Makefile  algo.md  comment.c  comment.h  include.c  include.sh  no_comment.c  no_comment.sh  preproc.c  scan.c  scan.h  scan.sh  test.c  test.sh
data_struct/: Makefile  graph.c  graph.h  mylist.h
fsm/: CMakeLists.txt  fsm.h
preproc/: Makefile  comment.c  comment.h  emptyline.c  emptyline.h  include.c  include.h  preproc.c  preproc.h
smoothsort/: CMakeLists.txt  README  smoothsort.c  smoothsort.h
stack/: Makefile  heapstack.c
string/: Makefile
test/: Makefile  heapstack.c  test.c
